tests/error/union_invalid.gw
// [contains] invalid union declaration.
 union
{
  one; two;
};
